package domain.account

case class MailAddress(value: String)

