package domain.account

case class SessionId(value: String)

