package domain.account

case class UserId(value: String)
