package domain.payment

case class ConvenienceStorePaymentCode(value: String)

