package domain.payment

case class CreditCard(value: String)
