package domain.shipping_address

case class ConvenienceStoreCode(value: String) extends ShippingInformation

