package domain.shipping_address

trait ShippingInformation
