package domain.shipping_address

case class ValidatedShippingAddress(shippingInformation: ShippingInformation, shippingType: ShippingType)

